--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ terms of speakers, age groups, topics, and recording environments. In addition,
 three new test sets - LibriVoxDansk, Forskerzonen, and DanskeTaler - are
 presented to evaluate the performance of existing Danish ASR models. To
 facilitate the use of the Den2Radio corpus and enhance accessibility of ASR
-research, the \texttt{ rifs-is-free-speech} toolkit is introduced, which
+research, the rifs-is-free-speech toolkit is introduced, which
 provides a comprehensive set of tools for data preprocessing, alignment,
 augmentation, and model evaluation. Experimental results show that our ASR
 model trained on the Den2Radio corpus is in parity with other comparable
